{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 318,
  "lineage": "1a9c5139-2f99-b3d2-d696-e2a8be25aeb6",
  "resources": [
    {
      "module": "module.BastionHost",
      "mode": "data",
      "type": "aws_subnet",
      "name": "BastionHostNet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0628836c7b21fe4c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 11,
            "cidr_block": "10.0.4.32/28",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "develop-bastion-host"
                ]
              }
            ],
            "id": "subnet-0628836c7b21fe4c2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "state": "available",
            "tags": {
              "Environment": "develop",
              "Name": "develop-bastion-host"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          }
        }
      ]
    },
    {
      "module": "module.BastionHost",
      "mode": "managed",
      "type": "aws_instance",
      "name": "BastionHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-013f17f36f8b1fefb",
            "arn": "arn:aws:ec2:us-east-1:342495404680:instance/i-0076b6664610feb6a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0076b6664610feb6a",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "develop-BastionHost-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06b2ecef0c345ffeb",
            "private_dns": "ip-10-0-4-38.ec2.internal",
            "private_ip": "10.0.4.38",
            "public_ip": "54.162.153.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c0ef2a2eff54007f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c3715403329500cb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0628836c7b21fe4c2",
            "tags": {
              "Environment": "develop",
              "Name": "develop-BastionHost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3715403329500cb"
            ]
          },
          "dependencies": [
            "module.BastionHost.aws_key_pair.BastionHost",
            "module.BastionHost.aws_security_group.bastion_host_gp",
            "module.BastionHost.data.aws_subnet.BastionHostNet",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.BastionHost",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_gp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:security-group/sg-0c3715403329500cb",
            "description": "Bastion Host security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3715403329500cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BastionHost Security Group",
            "name_prefix": "",
            "owner_id": "342495404680",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "develop",
              "Name": "develop-BastionHost-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ec3be55885ad567"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "data",
      "type": "aws_subnet",
      "name": "back1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0277e80446f74c7dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "develop-back-end-a"
                ]
              }
            ],
            "id": "subnet-0277e80446f74c7dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "state": "available",
            "tags": {
              "Environment": "develop",
              "Name": "develop-back-end-a"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          }
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "data",
      "type": "aws_subnet",
      "name": "back2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0f9bcc77c92d41e83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "develop-back-end-b"
                ]
              }
            ],
            "id": "subnet-0f9bcc77c92d41e83",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "state": "available",
            "tags": {
              "Environment": "develop",
              "Name": "develop-back-end-b"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          }
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "data",
      "type": "aws_subnet",
      "name": "front1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0e8064ddf158bad29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "develop-front-end-a"
                ]
              }
            ],
            "id": "subnet-0e8064ddf158bad29",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "state": "available",
            "tags": {
              "Environment": "develop",
              "Name": "develop-front-end-a"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          }
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "data",
      "type": "aws_subnet",
      "name": "front2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0414525a30b3e8dec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "develop-front-end-b"
                ]
              }
            ],
            "id": "subnet-0414525a30b3e8dec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "state": "available",
            "tags": {
              "Environment": "develop",
              "Name": "develop-front-end-b"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          }
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "back_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:loadbalancer/app/develop-Back-end-balancer/a2a7ef876284bc06",
            "arn_suffix": "app/develop-Back-end-balancer/a2a7ef876284bc06",
            "dns_name": "internal-develop-Back-end-balancer-671367337.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:342495404680:loadbalancer/app/develop-Back-end-balancer/a2a7ef876284bc06",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "develop-Back-end-balancer",
            "security_groups": [
              "sg-0cf091ae5dcd2f3ca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0277e80446f74c7dc"
              },
              {
                "subnet_id": "subnet-0f9bcc77c92d41e83"
              }
            ],
            "subnets": [
              "subnet-0277e80446f74c7dc",
              "subnet-0f9bcc77c92d41e83"
            ],
            "tags": {
              "Environment": "develop",
              "Name": "develop-Back-end-balancer"
            },
            "vpc_id": "vpc-05ec3be55885ad567",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.front_load_balancer.data.aws_subnet.back1",
            "module.front_load_balancer.data.aws_subnet.back2",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:loadbalancer/app/develop-Front-load-balancer/9ce33c09677f2d41",
            "arn_suffix": "app/develop-Front-load-balancer/9ce33c09677f2d41",
            "dns_name": "develop-Front-load-balancer-1677539908.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:342495404680:loadbalancer/app/develop-Front-load-balancer/9ce33c09677f2d41",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "develop-Front-load-balancer",
            "security_groups": [
              "sg-0cf091ae5dcd2f3ca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0414525a30b3e8dec"
              },
              {
                "subnet_id": "subnet-0e8064ddf158bad29"
              }
            ],
            "subnets": [
              "subnet-0414525a30b3e8dec",
              "subnet-0e8064ddf158bad29"
            ],
            "tags": {
              "Environment": "develop",
              "Name": "develop-Front-load-balancer"
            },
            "vpc_id": "vpc-05ec3be55885ad567",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.front_load_balancer.data.aws_subnet.front1",
            "module.front_load_balancer.data.aws_subnet.front2",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_end_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:listener/app/develop-Back-end-balancer/a2a7ef876284bc06/0012736c2669d0ec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:targetgroup/develop-back-lb-group/e12af229e4720fd6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342495404680:listener/app/develop-Back-end-balancer/a2a7ef876284bc06/0012736c2669d0ec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:loadbalancer/app/develop-Back-end-balancer/a2a7ef876284bc06",
            "port": 3500,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.front_load_balancer.aws_lb.back_lb",
            "module.front_load_balancer.aws_lb_target_group.back-end-machines",
            "module.front_load_balancer.data.aws_subnet.back1",
            "module.front_load_balancer.data.aws_subnet.back2",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:listener/app/develop-Front-load-balancer/9ce33c09677f2d41/990e1fdd69fcf97e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:targetgroup/develop-front-lb-group/b4763266ff947292",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342495404680:listener/app/develop-Front-load-balancer/9ce33c09677f2d41/990e1fdd69fcf97e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:loadbalancer/app/develop-Front-load-balancer/9ce33c09677f2d41",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.front_load_balancer.aws_lb.front_lb",
            "module.front_load_balancer.aws_lb_target_group.front-end-machines",
            "module.front_load_balancer.data.aws_subnet.front1",
            "module.front_load_balancer.data.aws_subnet.front2",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back-end-machines",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:targetgroup/develop-back-lb-group/e12af229e4720fd6",
            "arn_suffix": "targetgroup/develop-back-lb-group/e12af229e4720fd6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342495404680:targetgroup/develop-back-lb-group/e12af229e4720fd6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "develop-back-lb-group",
            "port": 3500,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05ec3be55885ad567"
          },
          "dependencies": [
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front-end-machines",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:targetgroup/develop-front-lb-group/b4763266ff947292",
            "arn_suffix": "targetgroup/develop-front-lb-group/b4763266ff947292",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342495404680:targetgroup/develop-front-lb-group/b4763266ff947292",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "develop-front-lb-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05ec3be55885ad567"
          },
          "dependencies": [
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-074ef6f1024ab9cd5",
            "id": "rtb-074ef6f1024ab9cd5",
            "owner_id": "342495404680",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a456ddf1d92546da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "develop-internet-gateway"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:internet-gateway/igw-0a456ddf1d92546da",
            "id": "igw-0a456ddf1d92546da",
            "owner_id": "342495404680",
            "tags": {
              "Name": "develop-internet-gateway"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0e8064ddf158bad29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e8064ddf158bad29",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "develop",
              "Name": "develop-front-end-a"
            },
            "tags_all": {
              "Environment": "develop",
              "Name": "develop-front-end-a"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0414525a30b3e8dec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0414525a30b3e8dec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "develop",
              "Name": "develop-front-end-b"
            },
            "tags_all": {
              "Environment": "develop",
              "Name": "develop-front-end-b"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0277e80446f74c7dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0277e80446f74c7dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "develop",
              "Name": "develop-back-end-a"
            },
            "tags_all": {
              "Environment": "develop",
              "Name": "develop-back-end-a"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0f9bcc77c92d41e83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f9bcc77c92d41e83",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "develop",
              "Name": "develop-back-end-b"
            },
            "tags_all": {
              "Environment": "develop",
              "Name": "develop-back-end-b"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-01e1387d88d31af89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/28",
            "id": "subnet-01e1387d88d31af89",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "develop",
              "Name": "develop-database-1"
            },
            "tags_all": {
              "Environment": "develop",
              "Name": "develop-database-1"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-09f2ce8a16ab43c52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.16/28",
            "id": "subnet-09f2ce8a16ab43c52",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "develop",
              "Name": "develop-database-2"
            },
            "tags_all": {
              "Environment": "develop",
              "Name": "develop-database-2"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0628836c7b21fe4c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.32/28",
            "id": "subnet-0628836c7b21fe4c2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "develop",
              "Name": "develop-bastion-host"
            },
            "tags_all": {
              "Environment": "develop",
              "Name": "develop-bastion-host"
            },
            "vpc_id": "vpc-05ec3be55885ad567"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:vpc/vpc-05ec3be55885ad567",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06746e622f23f0dda",
            "default_route_table_id": "rtb-074ef6f1024ab9cd5",
            "default_security_group_id": "sg-0cf091ae5dcd2f3ca",
            "dhcp_options_id": "dopt-92bbd1e8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05ec3be55885ad567",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-074ef6f1024ab9cd5",
            "owner_id": "342495404680",
            "tags": {
              "Environment": "develop",
              "Name": "develop-life-project-vpc"
            },
            "tags_all": {
              "Environment": "develop",
              "Name": "develop-life-project-vpc"
            }
          }
        }
      ]
    }
  ]
}